--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,62 @@ body {
     color: #434455;
     background-color: #FFFFFF;
 }
+h1, h2, h3, h4, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 ul {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
-
+img {
+    display: block;
+}
 a {
     text-decoration: none;
 }
-
-header {
-    background: #FFF;
+.page-container {
+	min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+main {
+    flex-grow: 1;
+}
+.container { 
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto; 
+    margin-right: auto;
+}
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.top-line {
+    background: #ffffff;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.container-nav {
+    border-bottom: 1px solid var(--cornflower, #E7E9FC);
+    background: #FFF;
+    display: flex;
+    
+}
+.navigation {
+    display: flex;
+    align-items: center;
+    
 
+}
 .logo {
+    display: flex;
     font-family: "Raleway", sans-serif;
     color: #4D5AE5;
     font-size: 18px;
@@ -24,7 +66,18 @@ header {
     line-height: 1.17;
     text-transform: uppercase;
     letter-spacing: 0.03em;
+    margin-right: 76px;
+    margin-top: 25.5px;
+    margin-bottom: 25.5px;
 
+}
+.navigation-menu {
+    display: flex;
+    column-gap: 40px;
+    margin-right: 332px ;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    
 }
 
 .studio {
@@ -37,34 +90,38 @@ header {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
 }
-
 .menu:active, .menu:hover, .menu:focus  {
     color: #404BBF;
-
 }
-
 .contacts {
     font-style: normal;
+    
 }
-
+.contacts-list {
+    display: flex;
+    align-items: flex-end;
+    margin-left: auto;
+    column-gap: 40px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    
+}
 .contacts-link {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
 }
-
 .contacts-link:hover, .contacts-link:focus {
     color: #404bbf;
 }
 
 .hero {
     background-color:#2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
-
 .main-title {
     color: #ffffff;
     font-size: 56px;
@@ -72,8 +129,10 @@ header {
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
+    padding-bottom: 48px;
+    width: 496px;
+    margin: auto;
 }
-
 .button {
     background-color:#4D5AE5;
     color: #ffffff;
@@ -83,39 +142,57 @@ header {
     line-height: 1.5;
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.04em;
-
-
+    display: block;
+    align-items: flex-start;
+    column-gap: 10px;
+    padding: 16px 32px;
+    margin: auto;
 }
-
 .button:hover, .button:focus {
     background-color: #404BBF;
-
 }
 
 .description {
     background-color:#FFF;
+    
+    
 }
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.descr-list {
+    display: flex;
+    column-gap: 24px;
+}
+.descr-item {
+width: calc((100% - 24px * 3) / 4);
+}
 .description-title {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-
 }
-
 .descr-info {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
 .team {
     background-color: #F4F4FD;
+       
 }
-
 .team-title {
     color: #2E2F42;
     text-align: center;
@@ -124,12 +201,17 @@ header {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
-
+.team-list {
+    display: flex;
+    column-gap: 24px;
+}
 .workers {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    
 }
-
 .team-subtitle {
     color: #2E2F42;
     text-align: center;
@@ -137,20 +219,21 @@ header {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    padding-top: 32px;
+    
 }
-
 .team-jobtitle {
     color: #434455;
     text-align: center;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-bottom: 32px;
 }
 
 .portfolio {
     background: #FFF;
 }
-
 .portfolio-title {
     color: #2E2F42;
     text-align: center;
@@ -159,35 +242,64 @@ header {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    padding-bottom: 72px;
 }
-
+.portfolio-list {
+    display: flex;
+    column-gap: 24px;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    
+}
+.portfolio-item {
+    background: #FFF;
+    flex-direction: column;
+    align-items: flex-start;
+    width: calc((100% - 24px * 2) / 3);
+    margin-bottom: 48px;
+    
+}
 .portfolio-subtitle {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+   
+    
 }
-
 .portfolio-info {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    
+    
 }
+.container-portfolio {
+    border: 1px solid #E7E9FC;
+    border-top: none;
+    padding: 32px 0 32px 16px;
 
+
+}
+  
 .bottom-page {
     background-color: #2E2F42;
 }
-
 .bottom-page .studio {
     color: #f4f4fd;
     line-height: 1.17;
 }
-
 .bottom-page-text {
     color: #F4F4FD;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+    padding-bottom: 100px;
+}
+.bottom-page .logo {
+    padding-top: 101.5px;
+    padding-bottom: 17.5px;
 }
