--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ main {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    border-bottom: 1px solid #e7e9fc
 }
 .container-nav {
-    border-bottom: 1px solid var(--cornflower, #E7E9FC);
     background: #FFF;
     display: flex;
     
@@ -73,11 +73,12 @@ main {
 }
 .navigation-menu {
     display: flex;
-    column-gap: 40px;
+    gap: 40px;
     margin-right: 332px ;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    
+        
+}
+.nav-menu-item {
+    padding: 24px 0; 
 }
 
 .studio {
@@ -90,6 +91,7 @@ main {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    
 }
 .menu:active, .menu:hover, .menu:focus  {
     color: #404BBF;
@@ -102,7 +104,7 @@ main {
     display: flex;
     align-items: flex-end;
     margin-left: auto;
-    column-gap: 40px;
+    gap: 40px;
     margin-top: 24px;
     margin-bottom: 24px;
     
@@ -130,8 +132,8 @@ main {
     text-align: center;
     letter-spacing: 0.02em;
     padding-bottom: 48px;
-    width: 496px;
     margin: auto;
+    max-width: 496px;
 }
 .button {
     background-color:#4D5AE5;
@@ -147,6 +149,10 @@ main {
     column-gap: 10px;
     padding: 16px 32px;
     margin: auto;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 .button:hover, .button:focus {
     background-color: #404BBF;
@@ -171,7 +177,7 @@ main {
 }
 .descr-list {
     display: flex;
-    column-gap: 24px;
+    gap: 24px;
 }
 .descr-item {
 width: calc((100% - 24px * 3) / 4);
@@ -182,6 +188,7 @@ width: calc((100% - 24px * 3) / 4);
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .descr-info {
     color: #434455;
@@ -205,11 +212,12 @@ width: calc((100% - 24px * 3) / 4);
 }
 .team-list {
     display: flex;
-    column-gap: 24px;
+    gap: 24px;
 }
 .workers {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
     
 }
 .team-subtitle {
@@ -219,7 +227,8 @@ width: calc((100% - 24px * 3) / 4);
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    padding-top: 32px;
+    margin-bottom: 8px;
+    
     
 }
 .team-jobtitle {
@@ -228,7 +237,10 @@ width: calc((100% - 24px * 3) / 4);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
+    
+}
+.container-workers {
+    padding: 32px 0;
 }
 
 .portfolio {
@@ -242,11 +254,12 @@ width: calc((100% - 24px * 3) / 4);
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 .portfolio-list {
     display: flex;
     column-gap: 24px;
+    row-gap: 48px;
     flex-wrap: wrap;
     align-content: flex-start;
     
@@ -265,6 +278,7 @@ width: calc((100% - 24px * 3) / 4);
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
    
     
 }
@@ -279,13 +293,14 @@ width: calc((100% - 24px * 3) / 4);
 .container-portfolio {
     border: 1px solid #E7E9FC;
     border-top: none;
-    padding: 32px 0 32px 16px;
+    padding: 32px 16px;
 
 
 }
   
 .bottom-page {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
 .bottom-page .studio {
     color: #f4f4fd;
@@ -297,9 +312,8 @@ width: calc((100% - 24px * 3) / 4);
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
-    padding-bottom: 100px;
 }
 .bottom-page .logo {
-    padding-top: 101.5px;
-    padding-bottom: 17.5px;
+    display: inline-block;
+    margin-bottom: 16px;
 }
