--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,12 @@ main {
     display: flex;
     gap: 40px;
     margin-right: 332px;
-    padding: 24px 0;
+    
         
 }
-
+.nav-menu-item {
+    padding: 24px 0;
+}
 
 .studio {
     color: #2E2F42;
@@ -90,6 +92,7 @@ main {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
     
     
 }
